syntax = "proto3";

option java_package = "org.bitlap.common.schema";
option java_multiple_files = true;
option java_outer_classname = "Schema";

message TablePB {
  string database = 1;
  string name = 2;
  int64 createTime = 3;
  int64 updateTime = 4;
  map<string, string> props = 5;
}

message GetServerMetadata {
  message GetServerAddressReq {
    string request_id = 1;
  }
  message GetServerAddressResp {
    string ip = 1;
    uint32 port = 2;
  }
}